# OpenTriviaNight

./: .dockerignore  .gitignore  COMMANDS.md  Caddyfile  Caddyfile.debug  Cargo.toml  Dockerfile  README.md  cloud-deploy-config.yml  docker-compose.debug.yml  docker-compose.yml  opentrivianight.sln  otn-prod-nginx.conf
.github/workflows/: ci.yml  deploy-prod.yml  deploy.yml
OpenTriviaNight.Api/: GameHub.cs  GameManager.cs  IdGenerator.cs  OpenTriviaNight.Api.csproj  OpenTriviaNight.Api.http  Program.cs  ResponseWrapper.cs  appsettings.json
OpenTriviaNight.Api.Tests/: GameManagerUnitTests.cs  IdGeneratorUnitTests.cs  OpenTriviaNight.Api.Tests.csproj
OpenTriviaNight.Api.Tests/Extensions/: GameDataExtensionsUnitTests.cs
OpenTriviaNight.Api/Extensions/: GameDataExtensions.cs
OpenTriviaNight.Api/Filters/: HubResponseFilter.cs
OpenTriviaNight.Api/Models/: AutoMapperProfiles.cs  GameCreateDto.cs  GameData.cs  GameState.cs  GameUpdateDto.cs
OpenTriviaNight.Api/Properties/: launchSettings.json
server-rs/: Cargo.toml
server-rs/.cargo/: config.toml
server-rs/src/: actions.rs  background.rs  dto.rs  main.rs  models.rs  util.rs  ws.rs
src/: app_state.rs  game.rs  game_handler.rs  main.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/public/: site.webmanifest
ui/src/: About.tsx  App.tsx  GameContext.ts  GameHelper.tsx  LabeledTextInput.tsx  Models.ts  index.css  useApiClient.ts
ui/src/game/: CreateGame.tsx  GameFinishedScreen.tsx  GameScreen.tsx  WaitingToStartScreen.tsx
ui/src/layout/: Header.tsx  (+1 more)
(+19 files in other folders)
