[package]
name = "opentrivianight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["tracing", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log", "log-always"] }
